# bale_old

./: .gitignore  Dockerfile  Dockerfile_oshmem  Doxyfile  INSTALL  README  README.md  clang_upc_run.sh  convey  install.sh  mainpage.h  runall.sh  t3
apps/: Makefile.am  Makefile.in  configure  configure.ac
apps/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
apps/histo_src/: README.md  histo.h  histo.upc  histo_agi.upc  histo_conveyor.upc  histo_exstack.upc  histo_exstack2.upc
apps/histo_src/alternates/: histo_exstack2_cyclic.upc  histo_exstack2_function.upc  histo_exstack2_goto.upc  histo_exstack_function.upc
apps/ig_src/: README.md  ig.h  ig.upc  ig_agi.upc  ig_conveyor.upc  ig_exstack.upc  ig_exstack2.upc
apps/ig_src/alternates/: ig_alternates.h  ig_exstack2_cyclic.upc  ig_exstack_function.upc  ig_exstack_pkg.upc
apps/permute_matrix_src/: permute_matrix.upc
apps/randperm_src/: README.md  randperm.upc  randperm_alternates.h
apps/randperm_src/alternates/: randperm_agi_opt.upc
apps/tests/: test_all.py
apps/topo_src/: README.md  toposort.h  toposort.upc  toposort_agi.upc  toposort_conveyor.upc  toposort_exstack.upc  toposort_exstack2.upc
apps/topo_src/alternates/: toposort_agi_oo.upc  toposort_alternates.h  toposort_cooler.upc  toposort_exstack_orig.upc
apps/transpose_matrix_src/: README.md  transpose_matrix.upc
apps/triangle_src/: README.md  triangle.h  triangle.upc  triangle_agi.upc  triangle_conveyor.upc  triangle_exstack.upc
apps/triangle_src/alternates/: triangle_agi_iter.upc  triangle_agi_oo.upc  triangle_agi_opt1.upc  triangle_alternates.h
apps/write_sparse_matrix_src/: write_sparse_matrix.upc
convey-0.4.2/: Doxyfile.in  INSTALL  Makefile.am  Makefile.in  README  alltoallv.c  bench_simple.awk  bench_tensor.awk  bolite.h  circle.c  common.c  common.h  config.h.in  configure  configure.ac  convey.c  convey.h  convey_alc8r.h  convey_impl.h  elastic.c  mpiport.c  mpp2shmem.c  mpp2shmem.h  mpp2upc.c  mpp2upc.h  narrative.h  porter.c  porter.h  porter_impl.h  private.h  putport.c  simple.c  sorter.c  sorter.h  tensor.c  tensor.h  test_elastic  test_simple  test_tensor  test_twohop  (+2 more)
convey-0.4.2/examples/: example.h  gather.c  histo.c
convey-0.4.2/include/: bitops.h  micro64.h
convey-0.4.2/m4/: doxygen.am
exstack/: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  exstack.h  exstack.upc  exstack2.upc  exstack2_shmem.c
exstack/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
libgetput/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  libgetput.h  libgetput.upc
libgetput/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
spmat/: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  geometric.upc  spmat.h  spmat_agi.upc  spmat_conveyor.upc  spmat_exstack.upc  spmat_exstack2.upc  spmat_utils.upc
spmat/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/bale_classic/apps/: Makefile.am  README.md  configure.ac  conftest.py
src/bale_classic/apps/histo_src/: README.md  histo.h  histo.upc  histo_agi.upc  histo_agp.upc  histo_conveyor.upc  histo_exstack.upc  histo_exstack2.upc
src/bale_classic/apps/ig_src/: README.md  ig.h  ig.upc  ig_agi.upc  ig_agp.upc  ig_conveyor.upc  ig_exstack.upc  ig_exstack2.upc
src/bale_classic/apps/permute_matrix_src/: README.md  permute_matrix.upc
src/bale_classic/apps/randperm_src/: README.md  randperm.upc  randperm_alternates.h
src/bale_classic/apps/sparse_matrix_io_src/: README.md  sparse_matrix_io.upc
src/bale_classic/apps/sssp_src/: README.md  sssp.h  sssp.upc  sssp_agi.upc  sssp_bellman_agi.upc  sssp_bellman_agp.upc  sssp_bellman_conveyor.upc  sssp_bellman_exstack.upc  sssp_bellman_exstack2.upc  sssp_conveyor.upc  sssp_delta_common.h  sssp_delta_common.upc  sssp_delta_conveyor.upc  sssp_delta_exstack.upc  sssp_delta_exstack2.upc  sssp_exstack.upc  sssp_exstack2.upc
src/bale_classic/apps/tests/: test_all.py
src/bale_classic/apps/topo_src/: README.md  toposort.h  toposort.upc  toposort_agi.upc  toposort_agp.upc  toposort_conveyor.upc  toposort_exstack.upc  toposort_exstack2.upc
src/bale_classic/apps/transpose_matrix_src/: README.md  transpose_matrix.upc
src/bale_classic/apps/triangle_src/: README.md  triangle.h  triangle.upc  triangle_agi.upc  triangle_agp.upc  triangle_conveyor.upc  triangle_exstack.upc  triangle_exstack2.upc
src/bale_classic/apps/union_find/: README  README.md
src/bale_classic/apps/write_sparse_matrix_src/: README.md  write_sparse_matrix.upc
src/bale_classic/convey/: Doxyfile.in  Makefile.am  a2a_align.c  a2a_apps.c  a2a_basic.c  accel.c  alltoallv.c  alltoallv.h  bench_simple.awk  biconvey.c  biconvey.h  biconvey_impl.h  bisimple.c  bitensor.c  bolite.h  cases.pl  common.c  common.h  configure.ac  convey.c  convey.h  convey_codec.h  convey_impl.h  elastic.c  mpp2mpi.h  mpp2nil.c  mpp2nil.h  mpp2shmem.c  mpp2shmem.h  mpp2upc.c  mpp2upc.h  narrative.h  packer.c  pivot.h  porter.h  porter_impl.h  private.h  putport.c  router.h  shmemptr.c  (+12 more)
src/bale_classic/convey/examples/: bigather.c  example.h  gather.c  histo.c  meld.c
src/bale_classic/convey/m4/: doxygen.am
src/bale_classic/libgetput/: Makefile.am  README.md  configure.ac  libgetput.h  libgetput.upc
src/bale_classic/spmat/: Makefile.am  README.md  configure.ac  geometric.upc  spmat.h  spmat_agi.upc  spmat_agp.upc  spmat_conveyor.upc  spmat_enums.h  spmat_exstack.upc  spmat_exstack2.upc  spmat_io.upc  spmat_opts.h  spmat_opts.upc  spmat_utils.upc
src/bale_classic/std_options/: Makefile.am  README.md  configure.ac  std_options.c  std_options.h  std_options.upc
src/other_parallel/Rust/: Cargo.toml  README.md  README_cray.md
src/other_parallel/Rust/delta_stepping/: .gitignore  Cargo.toml  README.md
src/other_parallel/Rust/spmat/: Cargo.toml
src/other_parallel/Rust/spmat/src/: lib.rs  (+1 more)
src/other_parallel/Rust/src/: lib.rs
src/other_parallel/Rust/toposort/: Cargo.toml
src/other_parallel/Rust/triangle/: Cargo.toml
(+270 files in other folders)
